--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins{
     id 'java-library'
-    id "io.qameta.allure" version "2.9.6"
 }
 
 repositories{
@@ -10,30 +9,12 @@ compileTestJava{
     options.encoding='UTF-8'
 }
 
-def junitVersion="5.8.2",
-    allureVersion = "2.17.2"
-
-allure{
-    report{
-        version.set(allureVersion)
-    }
-    adapter{
-        autoconfigure.set(true)
-        aspectjWeaver.set(true)
-        frameworks{
-            junit5{
-                adapterVersion.set(allureVersion)
-            }
-        }
-    }
-}
-
-
+def junitVersion="5.8.2"
 
 dependencies {
     testImplementation(
             "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion",
+            "com.github.javafaker:javafaker:1.0.2",
             "com.codeborne:selenide:6.2.0"
     )
     testRuntimeOnly (
@@ -42,16 +23,4 @@ dependencies {
     )
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-    systemProperties(System.getProperties())
-
-    testLogging {
-        lifecycle {
-//            events "started", "failed"
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
-        }
-    }
-}
 
